// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should not render title if name is not set 1`] = `
<section>
  <div>
    <div />
  </div>
</section>
`;

exports[`render should render component 1`] = `
<section>
  <div>
    <_class
      level={1}
      slug="foo"
    >
      Foo
    </_class>
    <div>
      <_class
        href="#!/Foo"
      >
        Open isolated ⇢
      </_class>
    </div>
  </div>
  <Examples
    examples={
      Array [
        Object {
          "content": "<button>OK</button>",
          "evalInContext": [Function],
          "type": "code",
        },
        Object {
          "content": "Hello *world*!",
          "type": "markdown",
        },
      ]
    }
  />
  <Components
    components={Array []}
  />
  <Sections
    sections={Array []}
  />
</section>
`;

exports[`render should render title if name is set 1`] = `
<section>
  <div>
    <_class
      level={1}
      slug="test"
    >
      test
    </_class>
    <div>
      <_class
        href="#!/test"
      >
        Open isolated ⇢
      </_class>
    </div>
  </div>
</section>
`;

exports[`should not render components list if not defined 1`] = `
<_class
  isolatedSection={false}
  name="No components"
  slug="no-components"
/>
`;

exports[`should not render sections if not defined 1`] = `
<_class
  isolatedSection={false}
  name="No sections"
  slug="no-sections"
/>
`;

exports[`should render component renderer 1`] = `
<_class
  components={
    <Components
      components={Array []}
    />
  }
  content={
    <Examples
      examples={
        Array [
          Object {
            "content": "<button>OK</button>",
            "evalInContext": [Function],
            "type": "code",
          },
          Object {
            "content": "Hello *world*!",
            "type": "markdown",
          },
        ]
      }
    />
  }
  isolatedSection={false}
  name="Foo"
  sections={
    <Sections
      sections={Array []}
    />
  }
  slug="foo"
/>
`;

exports[`should render components list 1`] = `
<_class
  components={
    <Components
      components={Array []}
    />
  }
  isolatedSection={false}
  name="Components"
  slug="components"
/>
`;

exports[`should render sections if defined 1`] = `
<_class
  isolatedSection={false}
  name="Nested sections"
  sections={
    <Sections
      sections={Array []}
    />
  }
  slug="nested-sections"
/>
`;
